--- a/Unity3D/2/案例展示.md
+++ b/Unity3D/2/案例展示.md
@@ -1,8 +1,11 @@
 # 自我介绍
+
 你好！欢迎来到我的github，我之前是一名火电站工程师，但出于对计算机的热爱终于还是选择了改行。在投递简历的过程中我发现因为我本人既不是计算机相关专业科班出身也没有报过相关的培训班，所以HR对我的兴趣似乎不大，因此我决定用过去一年里在学习和承接外包过程中制作的几款应用作为展示，希望能为自己争取到一份Unity3D开发的工作。
 
 # 项目展示
+
 ## 1.小骆驼涂智乐(苹果商店已上架)
+
 这是一款儿童涂涂乐AR应用，软件的主要需求为：
 
 (1)当摄像头识别到画册后根据图形生成相对应的模型。
@@ -20,21 +23,33 @@
 （识别图）
 
 ## 2.英雄联盟AR(因版权问题未能公开发行)
+
 这是一款面向玩家的AR应用，软件的主要需求为：
+
 (1)当摄像头识别到画册后根据图形生成相对应的英雄模型和3D UI。
+
 (2)点击3D UI后英雄模型即做出不同的动作并播放不同的人物音效。
+
 (3)多英雄在场景中的格斗(在策划过程中项目终止，未实现)。
+
 该应用使用Vuforia做为图像识别工具。
+
 （应用截图）
 （蒲公英链接）
 （识别图）
 
 ## 3.商品解说、介绍AR(已完成一期，等待客户回应是否决定做二期)
+
 一款电商AR应用，发包方为宇宙互联www.cloudwww.com，主要需求为：
+
 (1)当摄像头识别到图形后播放对应的视频。
-(2)视频播放过程中出现划线指示说明，带链接（可选）
+
+(2)视频播放过程中出现划线指示说明，带链接（可选）。
+
 (3)识别图、视频、划线指示说明均可在服务器端进行修改。
+
 该应用使用EasyAR做为图像识别工具，使用json格式进行数据传输，二期需要完成的工作主要为识别图分类加载，配合美工完成UI，数据加密。
+
 （需求文档截图）
 （服务器地址）
 （蒲公英链接）
@@ -42,9 +57,12 @@
 （时序图）
 
 ## 4.百家乐牌类游戏(自己的练习课)
+
 因偶然得到了这款牌类游戏的全套UI，于是决定以该仿制该游戏做为自己学习Unity3D的第一款练手项目，后端服务器在Linux环境下运行，使用python＋原生socket库制作。
+
 （截图）
 
 # 结语
+
 以上个人外包、练习项目除模型、UI等美工类工作外其余部分均为我个人在阅读Unity3D官方文档、书籍以及相关SDK的官方文档后自行完成的，写了这么多主要是为了凸显本人学习能力较强，能根据任务需要规划出合理的解决方案。
 
