--- a/Unity3D/2/案例展示.md
+++ b/Unity3D/2/案例展示.md
@@ -36,9 +36,9 @@
 
 [蒲公英测试网下载地址](https://www.pgyer.com/UJW1)
 
+[该应用识别图库](https://github.com/Jerrywyj/Learn-way/tree/master/Unity3D/2/LOLARImageTarget)
+
 （应用截图）
-（蒲公英链接）
-（识别图）
 
 ## 3.商品解说、介绍AR(已完成一期，等待客户回应是否决定做二期)
 
