--- a/Unity3D/2/案例展示.md
+++ b/Unity3D/2/案例展示.md
@@ -18,9 +18,9 @@
 
 该应用使用Vuforia做为图像识别工具，使用QR CodeBarcode Scanner and Generator---Cross Platform做为二维码识别工具。
 
-（应用截图）
+[识别图库](https://github.com/Jerrywyj/Learn-way/tree/master/Unity3D/2/CamelImageTarget)
 
-（识别图）
+（应用截图）
 
 ## 2.英雄联盟AR(因版权问题未能公开发行)
 
@@ -36,7 +36,7 @@
 
 [蒲公英测试网下载地址](https://www.pgyer.com/UJW1)
 
-[该应用识别图库](https://github.com/Jerrywyj/Learn-way/tree/master/Unity3D/2/LOLARImageTarget)
+[识别图库（该识别图只包含主要特征区域，发行版是加了边框的。）](https://github.com/Jerrywyj/Learn-way/tree/master/Unity3D/2/LOLARImageTarget)
 
 （应用截图）
 
