--- a/Unity3D/2/案例展示.md
+++ b/Unity3D/2/案例展示.md
@@ -53,9 +53,13 @@
 该应用使用EasyAR做为图像识别工具，使用json格式进行数据传输，二期需要完成的工作主要为识别图分类加载，配合美工完成UI，数据加密。
 
 （需求文档截图）
+
 （服务器地址）
+
 （蒲公英链接）
+
 （识别图）
+
 （时序图）
 
 ## 4.百家乐牌类游戏(自己的练习课)
@@ -67,4 +71,6 @@
 # 结语
 
 以上个人外包、练习项目除模型、UI等美工类工作外其余部分均为我个人在阅读Unity3D官方文档、书籍以及相关SDK的官方文档后自行完成的，写了这么多主要是为了凸显本人学习能力较强，能根据任务需要规划出合理的解决方案。
+
+# 提示：展示说明尚未编写完毕
 
