--- a/Unity3D/2/案例展示.md
+++ b/Unity3D/2/案例展示.md
@@ -1,6 +1,6 @@
 # 自我介绍
 
-你好！欢迎来到我的github，我之前是一名火电站工程师，但出于对计算机的热爱终于还是选择了改行。在投递简历的过程中我发现因为我本人既不是计算机相关专业科班出身也没有报过相关的培训班，所以HR对我的兴趣似乎不大，因此我决定用过去一年里在学习和承接外包过程中制作的几款应用作为展示，希望能为自己争取到一份Unity3D开发的工作。
+你好！欢迎来到我的github，我之前是一名火电站工程师，但出于对计算机的热爱终于还是选择了改行。一下是我过去一年里在学习和承接外包过程中制作的几款应用。
 
 # 项目展示
 
@@ -38,7 +38,7 @@
 
 [识别图库（该识别图只包含主要特征区域，发行版是加了边框的。）](https://github.com/Jerrywyj/Learn-way/tree/master/Unity3D/2/LOLARImageTarget)
 
-（应用截图）
+![LOL_1](https://github.com/Jerrywyj/Learn-way/tree/master/Unity3D/2/LOL_1.jpg)
 
 ## 3.商品解说、介绍AR(已完成一期，等待客户回应是否决定做二期)
 
