--- a/Unity3D/2/案例展示.md
+++ b/Unity3D/2/案例展示.md
@@ -1,6 +1,6 @@
 # 自我介绍
 
-你好！欢迎来到我的github，我之前是一名火电站工程师，但出于对计算机的热爱终于还是选择了改行。一下是我2016年2月至5月承接外包工作中制作的几款应用。
+你好！欢迎来到我的github，我之前是一名火电站工程师，但出于对计算机的热爱终于还是选择了改行。一下是我2016年2月至5月承接外包工作时制作的几款应用。
 
 # 项目展示
 
