--- a/Unity3D/2/案例展示.md
+++ b/Unity3D/2/案例展示.md
@@ -1,6 +1,6 @@
 # 自我介绍
 
-你好！欢迎来到我的github，我之前是一名火电站工程师，但出于对计算机的热爱终于还是选择了改行。一下是我2016年2月至5月期间承接外包工作时制作的几款应用。
+你好！欢迎来到我的github，我之前是一名火电站工程师，但出于对计算机的热爱终于还是选择了改行。以下是我2016年3月至6月期间开发的几款应用。
 
 # 项目展示
 
@@ -24,7 +24,7 @@
 
 ![2](https://github.com/Jerrywyj/Learn-way/blob/master/Unity3D/2/Camel_2.jpg)
 
-## 2.英雄联盟AR(因版权问题未能公开发行)
+## 2.英雄联盟AR(因版权问题未公开发行)
 
 这是一款面向玩家的AR应用，软件的主要需求为：
 
